--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -15,6 +15,17 @@
     </tr>
   </thead>
   <tbody>
+    <% @boards.each do |board| %>
+    <tr>
+      <th><%= board.id %></th>
+      <td><%= board.title %></td>
+      <td><%= board.name %></td>
+      <td><%= board.created_at %></td>
+      <td><%= board.updated_at %></td>
+    </tr>
+    <% end %>
+    <%
+=begin%>
     <tr>
       <th>1</th>
       <td>雑談掲示板</td>
@@ -29,5 +40,7 @@
       <td>2018年4月1日</td>
       <td>2018年4月15日</td>
     </tr>
+    <%
+=end%>
   </tbody>
 </table>
