--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -20,27 +20,9 @@
       <th><%= board.id %></th>
       <td><%= board.title %></td>
       <td><%= board.name %></td>
-      <td><%= board.created_at %></td>
-      <td><%= board.updated_at %></td>
+      <td><%= board.created_at.to_s(:datetime_jp) %></td>
+      <td><%= board.updated_at.to_s(:datetime_jp) %></td>
     </tr>
     <% end %>
-    <%
-=begin%>
-    <tr>
-      <th>1</th>
-      <td>雑談掲示板</td>
-      <td>Taro</td>
-      <td>2018年4月1日</td>
-      <td>2018年4月15日</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>雑談掲示板2</td>
-      <td>Ken</td>
-      <td>2018年4月1日</td>
-      <td>2018年4月15日</td>
-    </tr>
-    <%
-=end%>
   </tbody>
 </table>
