modify application.scss to import other scss file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@
 @import "base";
 @import "boards";
 @import "comments";
+@import "contacts";
+@import "home";
+@import "sessions";
+@import "users";
