update: modify admin/index.html

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -7,7 +7,7 @@
       <th>件名</th>
       <th>名前</th>
       <th>Eメール</th>
-      <th>内容</th>
+      <th>問い合わせ内容</th>
       <th>ステータス</th>
       <th></th>
     </tr>
