--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -8,7 +8,7 @@
       <th>名前</th>
       <th>Eメール</th>
       <th>問い合わせ内容</th>
-      <th>ステータス</th>
+      <th>現在のステータス</th>
       <th></th>
     </tr>
   </thead>
