update: update home page html

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
-<%= render partial: "users/login_form" %>
+<h1 class="display-1">掲示板アプリ</h1>
+<p class="text-monospace h3">この掲示板は誰でも自由に使用することができます</p>
+<p class="h3">rails, dokcer, circle ci, git, bootstrap, postgresの勉強のために作成しています</p>
+
+<br>
+<br>
+
+<h1 class="bg-primary text-center">Hello</h1>
+<h1 class="bg-danger text-center">Goodbye</h1>
