comment: simply add comment to _header.html.erb

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,8 @@
+<%# navbar-expand-lgでlarge以下で表示する %>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <%# navbar-brandは会社、製品名、プロジェクト名などを入れる %>
   <a class="navbar-brand" href="#">BoardApp</a>
+  <%# 画面幅を小さくしていくと、グローバルナビが消えて、開閉式のメニューボタンが表示されるようにする設定 %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
